--- a/index.html
+++ b/index.html
@@ -37,8 +37,11 @@
                 <input type="checkbox" id="mililitros" value="ml" class="uncheckable">
                 <span>ml</span>
             </label><br><br>
-            <button type="submit" class="waves-effect waves-light btn-small" id="submitCard">Adicionar</button>
-            <button class="waves-effect waves-light btn-small" id="exportButton">Exportar Dados</button>
+            <div class="botoes">
+                <button type="submit" class="waves-effect waves-light btn-small" id="submitCard">Adicionar</button><br>
+                <button class="waves-effect waves-light btn-small" style="margin: 10px 0px;" id="exportButton">Exportar Dados</button><br>
+                <button class="waves-effect waves-light btn-small" id="exportBackup">Backup Mensal</button>
+            </div>
         </form>
     </div>
     <div class="box-esquerda">
