--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,11 @@
             <label>
                 <input type="checkbox" id="mililitros" value="ml" class="uncheckable">
                 <span>ml</span>
-            </label><br><br>
+            </label><br>
+            <label>
+                <input type="checkbox" id="unidade" value="kits" class="uncheckable">
+                <span>kits</span><br><br>
+            </label>
             <div class="botoes">
                 <button type="submit" class="waves-effect waves-light btn-small" id="submitCard">Adicionar</button><br>
                 <button class="waves-effect waves-light btn-small" style="margin: 10px 0px;" id="exportButton">Exportar Dados</button><br>
